# gst-plugins-base

./: configure.ac
docs/libs/: gst-plugins-base-libs-sections.txt
epitivo/: epitivo.py  pipeline.py  ui.py  viewer.py  widgets.py
ext/: Makefile.am
ext/epitech/: Makefile.am  bitop256.c  bitop256.h  dct.c  dct.h  dct_decode.c  dct_encode.c  gstepitech.c  gstepitechdec.c  gstepitechdec.h  gstepitechenc.c  gstepitechenc.h  huffman.c  huffman.h  rle.c  rle.h  rle_decode.c  rle_encode.c  test_dct.c  test_huffman.c  test_rle.c  yuv.c  yuv.h
gst-libs/gst/audio/: audio.h  gstaudiodecoder.c  gstaudioencoder.c  gstaudiometa.c
gst-libs/gst/pbutils/: gstdiscoverer-types.c
gst-libs/gst/rtp/: gstrtpbaseaudiopayload.c  gstrtpbaseaudiopayload.h  gstrtpbasedepayload.c  gstrtpbuffer.c  gstrtpbuffer.h
gst-libs/gst/video/: Makefile.am  gstbasemixer.c  gstbasemixer.h  gstbasemixerpad.h  gstvideodecoder.c  gstvideofilter.c  gstvideometa.c  video-format.h  video-info.c  video-orc.orc  video.h  videoconvert.c
gst/adder/: gstadder.c  gstadder.h
gst/encoding/: gststreamcombinerpad.h
gst/slowmo/: Makefile.am  QPoint_crack.h  abstractFlowSource_sV.cpp  abstractFlowSource_sV.h  bezierTools_sV.cpp  bezierTools_sV.h  flowSourceOpenCV_sV.cpp  flowSourceOpenCV_sV.h  gstslowmo.c  gstslowmo.h  interpolate_sV.cpp  interpolate_sV.h  interpolator_sV.cpp  interpolator_sV.h  sourceField_sV.cpp  sourceField_sV.h  vector_sV.cpp  vector_sV.h
gst/videorate/: gstvideorate.c  gstvideorate.h
gst/videotestsrc/: gstvideotestsrc.c  gstvideotestsrc.h
tools/: gst-discoverer.c
win32/common/: libgstpbutils.def
